# poetry-packaging-demo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
poetry_packaging_demo/: __init__.py  util.py
release/: poetry_packaging_demo-0.1.14-py3-none-any.whl  poetry_packaging_demo-0.1.15-py3-none-any.whl  poetry_packaging_demo-0.1.16-py3-none-any.whl
tests/: test.py
