[tool.poetry]
name = "poetry-packaging-demo"
version = "0.3.0"
description = "A demo of a Python packaging workflow using GH Actions and poetry"
authors = ["Matteo Fordiani <matteofordiani@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_packaging_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
