[tool.poetry]
name = "poetry-packaging-demo"
version = "1.3.2"
description = "A demo of a Python packaging workflow using GH Actions and poetry"
authors = ["Matteo Fordiani <matteofordiani@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_packaging_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
